--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 			</div>
 			<row class="row">
 				<div class="col-md-offset-4 col-md-4 col-sm-12 col-xs-12 text-center">
+
 					<div class="input-group">
-						<input type="text" class="form-control" placeholder="usuario" aria-describedby="basic-addon1">
-						<input type="text" class="form-control" placeholder="contraseña" aria-describedby="basic-addon1">
+						<input type="text" class="form-control" placeholder="usuario" aria-describedby="basic-addon1" required="required">
+						<input type="text" class="form-control" placeholder="contraseña" aria-describedby="basic-addon1" required="required">
 					</div>									
 				</div>
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
@@ -72,6 +73,7 @@
 			</div>
 		</div>
 	</footer>
+	<link rel="stylesheet" href="assets/js/main.js">
 	<!-- jQuery (necessary for Bootstrap’s JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
     </script>
