haciendo el drag & drop

--- a/index.html
+++ b/index.html
@@ -21,19 +21,15 @@
 					<ul class="nav navbar-nav">
 			           	<li class="dropdown text center"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Idioma: español(España) <span class="caret"></span></a>
 	          				<ul class="dropdown-menu">
-					            <li><a href="#">Action</a></li>
-					            <li><a href="#">Another action</a></li>
-					            <li><a href="#">Something else here</a></li>
-					            <li role="separator" class="divider"></li>
-					            <li><a href="#">Separated link</a></li>
-					            <li role="separator" class="divider"></li>
-					            <li><a href="#">One more separated link</a></li>
+					            <li><a href="#">English</a></li>
+					            <li><a href="#">Francais</a></li>
                         	</ul>
                     	</li>
                 	</ul>
                 </div>
 			</div>
-			<div class="row">
+			<form action="index2.html">
+				<div class="row">
 				<div class="col-sm-12 col-xs-12 text-center">
                 	<img class="responsive" src="assets/img/Instagram_logo_white.png" alt="">
                 </div>
@@ -42,12 +38,12 @@
 				<div class="col-md-offset-4 col-md-4 col-sm-12 col-xs-12 text-center">
 
 					<div class="input-group">
-						<input type="text" class="form-control" placeholder="usuario" aria-describedby="basic-addon1" required="required">
-						<input type="text" class="form-control" placeholder="contraseña" aria-describedby="basic-addon1" required="required">
+						<input type="text" required="required" class="form-control" placeholder="usuario" aria-describedby="basic-addon1">
+						<input type="text" required="required" class="form-control" placeholder="contraseña" aria-describedby="basic-addon1">
 					</div>									
 				</div>
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-					<button type="button" class="btn btn-default navbar-btn">Iniciar sesión</button>
+					<button type="submit" class="btn btn-default navbar-btn">Iniciar sesión</button>
 				</div>
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
 					<p>¿Has olvidado tu información de inicio de sesión?<b>obtén ayuda</b></p>
@@ -55,7 +51,8 @@
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
 					<hr>
 				</div>
-			</row>
+			</row>	
+			</form>
 			<div class="row">
 				<div class="col-sm-12 col-xs-12 text-center">
 					<a href="https://www.facebook.com/laboratoriachile/" class="icono">
@@ -73,7 +70,6 @@
 			</div>
 		</div>
 	</footer>
-	<link rel="stylesheet" href="assets/js/main.js">
 	<!-- jQuery (necessary for Bootstrap’s JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
     </script>
