drag & drop listo

--- a/index2.html
+++ b/index2.html
@@ -94,7 +94,7 @@
 			</div>
 		</div>
 	</section>
-	<link rel="stylesheet" href="assets/js/main.js">
+	<script src="assets/js/main.js"></script>
 	<!-- jQuery (necessary for Bootstrap’s JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
     </script>
