html text type= password

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 					<div class="input-group">
 						<input type="text" required="required" class="form-control" placeholder="usuario" aria-describedby="basic-addon1">
-						<input type="text" required="required" class="form-control" placeholder="contraseña" aria-describedby="basic-addon1">
+						<input type="password" required="required" class="form-control" placeholder="contraseña" aria-describedby="basic-addon1">
 					</div>									
 				</div>
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
