--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
 	<section class="second-section">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12 col-sm-12 recientes">
+				<div class="col-md-12 col-sm-12 text-center">
 					<h2>PHOTO BOOTH</h2>
 				</div>
 			</div>
